# transit-observer

./: .gitignore  AGENTS.md  CALIBRATION_VIZ_DESIGN.md  CLAUDE.md  README.md  config.toml.example  pyproject.toml  run.sh
src/transit_observer/: CTABusStops.json  CTAStations.json  IntercampusCatalog.json  __init__.py  air_quality_client.py  alerts_client.py  api.py  auto_upgrade.py  bus_client.py  bus_predictor.py  catalog.py  cdot_traffic_client.py  cli.py  collector.py  config.py  corpus.py  corridors.py  cta_gtfsrt_client.py  cta_id_bridges.py  cta_train_client.py  dashboard.py  db.py  direction_audit.py  gtfs_static_archive.py  gtfs_static_extract.py  (+18 more)
tests/: test_api.py  test_auto_upgrade.py  test_bus_client.py  test_bus_telemetry_predictor.py  test_bus_v3_calibration.py  test_bus_v3_inference.py  test_bus_v3_normalize.py  test_calibration_metrics.py  test_catalog.py  test_conformal.py  test_corpus.py  test_corridors.py  test_dashboard_table_guard.py  test_diagnostics.py  test_direction_audit.py  test_features.py  test_metra_client.py  test_mode_dispatch.py  test_predictor_protocol.py  test_quantile_distribution.py  test_quantile_gbm.py  test_query_log.py  test_registry.py  test_resolver.py  test_schema_migration.py  test_setup.py  test_stop_arrival.py  test_tier1_data_capture.py  test_tier2_data_capture.py  test_tier3_data_capture.py  test_time_distribution.py  test_train_telemetry_predictor.py  test_train_v2_calibration.py  test_train_v2_inference.py  test_train_v2_normalize.py  test_trajectory.py  test_trip_generator.py  test_truth_confidence.py  test_viz.py
(+42 files in other folders)
